# wive-ng-mt

./: .gitignore  1.patch  History  Makefile  READ.me  README  ToDo  autoconf.h  clear  compile  compile-releases  compile-releases-all  compile-releases-real  config.arch  dev.tgz  flash.sh  history.sh  make_demo.sh  mdev.c.diff  new.tar.bz2  sdk_version.h  strip.sh  version  vlan.diff
libext/libnfnetlink/: DoConfigure.sh  Makefile.am  Makefile.in  configure
libext/libnfnetlink/include/: Makefile.in
libext/libnfnetlink/include/libnfnetlink/: Makefile.in  linux_nfnetlink.h
libext/libnfnetlink/src/: Makefile.in
libext/libnfnetlink/utils/: Makefile.in
libext/libupnp/: ChangeLog  DoConfigure.sh  Makefile.am  autoconfig.h.in
libext/libupnp/ixml/src/: element.c  ixmlparser.c  node.c
libext/libupnp/upnp/sample/: Makefile.am
user/chillispot/coova-chilli-1.3.0/: CREDITS  ChangeLog  LICENSE  Makefile.am  Makefile.in  configure
user/chillispot/coova-chilli-1.3.0/bstring/: Makefile.in  snprintf.c
user/chillispot/coova-chilli-1.3.0/conf/: CoovaChilliLib.py  Makefile.am  Makefile.in  chilli  chilli.conf  chilli.in  defaults  defaults.in  down.sh  down.sh.in  functions  functions.in  newmulti.sh  up.sh  up.sh.in
user/chillispot/coova-chilli-1.3.0/debian/: Makefile  Makefile.in  control
user/chillispot/coova-chilli-1.3.0/distro/: Makefile  Makefile.in
user/chillispot/coova-chilli-1.3.0/doc/: Makefile  Makefile.in  chilli.8  chilli.conf.5  chilli_query.1  hotspotlogin.cgi
user/chillispot/coova-chilli-1.3.0/json/: Makefile.in
user/chillispot/coova-chilli-1.3.0/miniportal/: Makefile.in  config-local.sh  error.chi.in  functions.sh  payment.sh.in  uam.sh  wispr.sh.in
user/chillispot/coova-chilli-1.3.0/src/: Makefile.am  Makefile.in  chilli.c  (+37 more)
user/ethtool/: DoConfigure.sh  Makefile  Makefile.am  Makefile.in  NEWS  configure  ethtool  ethtool-config.h  ethtool-copy.h  ethtool-util.h  ethtool.8  ethtool.8.in  ethtool.c  ethtool.spec  fec_8xx.c  ibm_emac.c  ixgbe.c  rxclass.c  sfpdiag.c
user/lldpd/: .gitignore  .travis.yml  DoConfigure.sh  Makefile  Makefile.am  Makefile.in  NEWS  autogen.sh  config.h  config.h.in  configure  configure.ac  libevent  lldpd.conf
user/lldpd/debian/: lldpd.install  rules
user/lldpd/m4/: jansson.m4  json-c.m4  libevent.m4  snmp.m4  xml2.m4
user/lldpd/osx/: Makefile  Makefile.am  Makefile.in
user/lldpd/src/: Makefile  Makefile.am  Makefile.in  lldpd-structs.c  lldpd-structs.h  log.c
user/lldpd/tests/: Makefile  Makefile.am  Makefile.in  check_snmp.c
user/netcwmp/: DoConfigure.sh  Makefile.am  Makefile.in  README.md  config.h.in  configure
user/netcwmp/conf/: config-cwmp-dhcpopt.sh  cwmp.conf  device.xml  device_dlink.xml  device_dlink_101.xml  device_dlink_115.xml  device_tr-098-1-8-0.xml
user/quagga/: DoConfigure.sh  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.h.in  configure  configure.ac  depcomp  missing
user/quagga/babeld/: Makefile.in  xroute.c
user/quagga/bgpd/: Makefile.in  bgp_aspath.c  bgp_attr.c  bgp_attr.h  bgp_clist.c  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_encap.c  bgp_fsm.c  bgp_main.c  bgp_mpath.c  bgp_mplsvpn.c  bgp_network.c  bgp_nexthop.c  bgp_nht.c  bgp_open.c  bgp_packet.c  bgp_route.c  bgp_routemap.c  bgp_snmp.c  bgp_vty.c  bgp_zebra.c  bgpd.c
user/quagga/doc/: Makefile  Makefile.in  fig-rs-processing.dia  quagga.info  texinfo.tex  version.texi
user/quagga/fpm/: Makefile.in
user/quagga/isisd/: Makefile.in  isis_circuit.c  isis_dlpi.c  isis_lsp.c  isis_pdu.c  isis_pfpacket.c  isis_routemap.c  isis_spf.c  isis_zebra.c  isisd
user/quagga/lib/: Makefile.in  command.c  filter.c  hash.c  if.c  if.h  keychain.c  memory.c  memtypes.h  plist.c  privs.c  sockunion.c  thread.c  vty.c  workqueue.c  zclient.c  zebra.h
user/quagga/m4/: Makefile.in
user/quagga/nhrpd/: Makefile  Makefile.in  nhrp_event.c
user/quagga/ospf6d/: Makefile.in  ospf6_abr.c  ospf6_area.c  ospf6_asbr.c  ospf6_flood.c  ospf6_interface.c  ospf6_intra.c  ospf6_lsa.c  ospf6_lsdb.c  ospf6_main.c  ospf6_message.c  ospf6_spf.c  ospf6_top.c  ospf6_zebra.c  ospf6d.h
user/quagga/ospfclient/: Makefile.in  ospf_apiclient.c
user/quagga/ospfd/: Makefile.in  ospf_asbr.c  ospf_interface.h  ospf_lsa.c  ospf_main.c  ospf_neighbor.c  ospf_opaque.c  ospf_packet.c  ospf_spf.c  ospf_te.c  ospf_vty.c  ospfd.c
user/quagga/pimd/: Makefile  Makefile.in  pim_cmd.c  pim_hello.c  pim_iface.c  pim_ifchannel.c  pim_pim.c  pim_rpf.c  pim_tlv.c  pim_vty.c  pim_zebra.c  pim_zlookup.c  pimd.h
user/quagga/pkgsrc/: Makefile.in
user/quagga/qpb/: Makefile.in
user/quagga/redhat/: Makefile.in  quagga.spec.in
user/quagga/ripd/: Makefile.in  rip_zebra.c  ripd.c  ripd.h
user/quagga/ripngd/: Makefile.in  ripng_interface.c  ripng_route.c  ripng_routemap.c  ripng_zebra.c  ripngd.c
user/quagga/solaris/: Makefile  Makefile.in  quagga.init.in
user/quagga/tests/: Makefile  Makefile.in  test-commands-defun.c  test-commands.c
user/quagga/tools/: multiple-bgpd.sh
user/quagga/vtysh/: Makefile.in  extract.pl.in  vtysh.c  vtysh_cmd.c  vtysh_config.c
user/quagga/watchquagga/: Makefile.in  watchquagga.c
user/quagga/zebra/: Makefile.in  connected.c  interface.c  kernel_socket.c  main.c  redistribute.c  rib.h  router-id.c  rt_ioctl.c  rt_netlink.c  rt_socket.c  rtadv.c  rtread_sysctl.c  zebra_fpm_netlink.c  zebra_rib.c  zebra_rnh.c  zebra_routemap.c  zebra_vty.c  zserv.c
user/transmission/: DoConfigure.sh  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  transmission-gtk.spec
user/transmission/cli/: Makefile.in
user/transmission/daemon/: Makefile.in
user/transmission/extras/: Makefile.in
user/transmission/gtk/: Makefile  Makefile.in
user/transmission/libtransmission/: Makefile.in  rpc-server.c  rpcimpl.c  session.c  tr-utp.c  transmission.h  version.h  web.c
user/transmission/macosx/: Makefile  Makefile.in
user/transmission/po/: Makefile.in
user/transmission/qt/: config.pri
user/transmission/utils/: Makefile.in
user/transmission/web/: Makefile  Makefile.in
(+7277 files in other folders)
